--- a/src/HAX506X_Probabilites/tds/td_main.tex
+++ b/src/HAX506X_Probabilites/tds/td_main.tex
@@ -41,4 +41,9 @@
     \setcounter{section}{4}
     \setcounter{tdcounter}{0}
     \input{../tds/td_4.tex}
+
+    \section*{TD5 --- Calcul de lois}\label{sec:TD5}
+    \addcontentsline{toc}{section}{\nameref{sec:TD5}}
+    \setcounter{section}{5}
+    \setcounter{tdcounter}{0}
 \end{document}
