--- a/src/HAX506X_Probabilites/tds/td_main.tex
+++ b/src/HAX506X_Probabilites/tds/td_main.tex
@@ -14,36 +14,39 @@
 \begin{document}
     \maketitle
     \tableofcontents
+    
     \newpage
-
     \section*{TD1 --- Espaces probabilisés}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
     \setcounter{section}{1}
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
-    \newpage
 
+    \newpage
     \section*{TD2 --- Variables aléatoires}\label{sec:TD2}
     \addcontentsline{toc}{section}{\nameref{sec:TD2}}
     \setcounter{section}{2}
     \setcounter{tdcounter}{0}
     \input{../tds/td_2.tex}
-    \newpage
     
+    \newpage
     \section*{TD3 --- Moments d'une variable aléatoire}\label{sec:TD3}
     \addcontentsline{toc}{section}{\nameref{sec:TD3}}
     \setcounter{section}{3}
     \setcounter{tdcounter}{0}
     \input{../tds/td_3.tex}
 
+    \newpage
     \section*{TD4 --- Fonctions associées à une variable aléatoire}\label{sec:TD4}
     \addcontentsline{toc}{section}{\nameref{sec:TD4}}
     \setcounter{section}{4}
     \setcounter{tdcounter}{0}
     \input{../tds/td_4.tex}
 
+    \newpage
     \section*{TD5 --- Calcul de lois}\label{sec:TD5}
     \addcontentsline{toc}{section}{\nameref{sec:TD5}}
     \setcounter{section}{5}
     \setcounter{tdcounter}{0}
+    \input{../tds/td_5.tex}
 \end{document}
