--- a/src/HAX506X_Probabilites/tds/td_5.tex
+++ b/src/HAX506X_Probabilites/tds/td_5.tex
@@ -270,11 +270,11 @@
                     \bb E\ff{e^{it(Y+Z)}}
                     &= \bb E\ff{e^{itY}e^{itZ}}\\
                     &= \bb E\ff{e^{itY}}\bb E\ff{e^{itZ}}\\
-                    &= e^{-\frac{t^2}{2}}e^{-\frac{\sigma^2t^2}{2}}\\
-                    &= e^{-\frac{(1+\sigma^2)t^2}{2}}
+                    &= e^{-\frac{\sigma^2t^2}{2}}e^{-\frac{\sigma^2t^2}{2}}\\
+                    &= e^{-\sigma^2t^2}
                 \end{aligned}
             \end{equation*}
-            Donc, \(Y + Z \sim \mathcal N(0,1+\sigma^2)\).
+            Donc, \(Y + Z \sim \mathcal N(0,2\sigma^2)\).
         \end{enumerate}
     \end{td-sol}
 }{}
