--- a/src/HAX506X_Probabilites/tds/td_4.tex
+++ b/src/HAX506X_Probabilites/tds/td_4.tex
@@ -146,8 +146,8 @@
                     F_{-X}(t) 
                     &= \bb P(-X\leq t) = \bb P(X\geq -t) \\
                     & \bb P(X\in \fo{-t,+\infty}) = \int_{-t}^{+\infty} f_X(x) \der x\\
-                    \text{\footnotesize{\(x=-u\)}}&= \int_{t}^{-\infty} f_X(-u) -\der u\\
-                    \text{\footnotesize{\(f_X\) est paire}}&= \int_{-\infty}^{t} f_X(u) \der u\\
+                    \smol{\(x=-u\)}&= \int_{t}^{-\infty} f_X(-u) -\der u\\
+                    \smol{\(f_X\) est paire}&= \int_{-\infty}^{t} f_X(u) \der u\\
                     &= \bb P(X\leq t) = F_X(t)
                 \end{aligned}
             \end{equation*}
