updated chapter and suprasection

--- a/src/common/common_header.tex
+++ b/src/common/common_header.tex
@@ -61,9 +61,9 @@
 \newcounter{suprasection}
 \renewcommand\thesuprasection{\arabic{suprasection}}
 
-% Format the suprasection (in document)
+% Format the suprasection (in document) with matching style
 \titleformat{\suprasection}
-  {\normalfont\Large\bfseries}{\thesuprasection}{1em}{}
+  {\color{astral}\normalfont\sffamily\bfseries\Large\filcenter}{\thesuprasection}{1em}{}
 \titlespacing*{\suprasection}{0pt}{3.5ex plus 1ex minus .2ex}{2.3ex plus .2ex}
 
 % Adjust TOC formatting - shift everything down one level
