--- a/src/HAX506X_Probabilites/assets/module_header.tex
+++ b/src/HAX506X_Probabilites/assets/module_header.tex
@@ -1,4 +1,11 @@
 \makeatletter
+
+\dottedcontents{suprasection}[3.5em]{}{2.3em}{1pc}    % Was 1.5em, now 3.5em
+\dottedcontents{section}[5.8em]{}{2.8em}{1pc}         % Was 3.8em, now 5.8em
+\dottedcontents{subsection}[9.0em]{}{3.2em}{1pc}      % Was 7.0em, now 9.0em
+\dottedcontents{subsubsection}[12.0em]{}{3.8em}{1pc}  % Was 10.0em, now 12.0em
+
+
 %--------------------------------------------------------------------------------
 % Custom Per Subject Theorems
 %--------------------------------------------------------------------------------
@@ -12,8 +19,5 @@
 \mytheorem{proposition}{Proposition}{verdant}{}{}
 \mytheorem{example}{Exemple}{matrix-mist}{}{}
 \mytheorem{theorem}{Théorème}{astral}{}{}
-
-\setcounter{secnumdepth}{5}
-\setcounter{tocdepth}{5}  % Show up to level 5 in TOC
 
 \makeatother
