--- a/src/HAX506X_Probabilites/cours/chapter_main.tex
+++ b/src/HAX506X_Probabilites/cours/chapter_main.tex
@@ -13,17 +13,22 @@
 \begin{document}
     \maketitle
     \tableofcontents
+    
     \newpage
-
     \suprasection*{Chapitre 1 --- Bases de la théorie des probabilités}\label{sec:CH1}
-    \addcontentsline{toc}{suprasection}{\nameref{sec:CH1}}
+    \addcontentsline{toc}{suprasection}{Chapitre 1 --- Bases de la théorie des probabilités}
     \setcounter{suprasection}{1}
     \input{../cours/chapter_1.tex}
+    
     \newpage
-
     \suprasection*{Chapitre 2 --- Indépendance}\label{sec:CH2}
-    \addcontentsline{toc}{suprasection}{\nameref{sec:CH2}}
+    \addcontentsline{toc}{suprasection}{Chapitre 2 --- Indépendance}
     \setcounter{suprasection}{2}
     \input{../cours/chapter_2.tex}
+    
     \newpage
+    \suprasection*{Chapitre 3 --- Variables aléatoires}\label{sec:CH3}
+    \addcontentsline{toc}{suprasection}{Chapitre 3 --- Variables aléatoires}
+    \setcounter{suprasection}{3}
+    \input{../cours/chapter_3.tex}
 \end{document}
