--- a/src/HAX506X_Probabilites/cours/chapter_main.tex
+++ b/src/HAX506X_Probabilites/cours/chapter_main.tex
@@ -27,8 +27,8 @@
     \input{../cours/chapter_2.tex}
     
     \newpage
-    \suprasection*{Chapitre 3 --- Variables aléatoires}\label{sec:CH3}
-    \addcontentsline{toc}{suprasection}{Chapitre 3 --- Variables aléatoires}
+    \suprasection*{Chapitre 3 --- Loi des grands nombres}\label{sec:CH3}
+    \addcontentsline{toc}{suprasection}{Chapitre 3 --- Loi des grands nombres}
     \setcounter{suprasection}{3}
     \input{../cours/chapter_3.tex}
 \end{document}
