--- a/src/common/common_header.tex
+++ b/src/common/common_header.tex
@@ -112,4 +112,6 @@
 \newcommand{\skipline}{\vspace{\baselineskip}} % Skip a line
 \newcommand{\noi}{\noindent} % No indentation
 
+\newcommand{\ptr}{\( \triangleright \)} % Triangle right symbol
+
 \makeatother % End of @ usage
