--- a/src/HAX506X_Probabilites/cours/chapter_3.tex
+++ b/src/HAX506X_Probabilites/cours/chapter_3.tex
@@ -162,7 +162,7 @@ et une variable aléatoire \(X\) réelle (ou complexe).
     Soit \({(X_n)}_{n\geq 1}\) une suite de variables aléatoires
     réelles dans \(\mathcal L^2(\Omega, \scr F, \bb P)\). On
     suppose que les \(X_n\) sont indépendantes et identiquement
-    distribuées (c'est-à-dire de même loi, i.i.d. en abrégé).
+    distribuées (c'est-à-dire de même loi, i.i.d.\ en abrégé).
 
     On note \(\mu\) leur espérance: \(\mu = \bb E[X_1]\). On
     pose \(S_n = X_1 + \cdots + X_n\). Alors
@@ -205,7 +205,7 @@ et une variable aléatoire \(X\) réelle (ou complexe).
 \end{proof}
 
 \begin{example}
-    Si les \(X_n\) sont i.i.d. de loi \(\mathcal B(p)\), alors
+    Si les \(X_n\) sont i.i.d.\ de loi \(\mathcal B(p)\), alors
     \begin{equation*}
         \frac{X_1 + \cdots + X_n}{n} \cvpn p.
     \end{equation*}
@@ -370,7 +370,7 @@ et une variable aléatoire \(X\) réelle (ou complexe).
 
 \begin{theorem}[Loi forte des grands nombres]
     Soit \({(X_n)}_{n\geq 1}\) une suite de variables aléatoires
-    réelles i.i.d. dans \(\mathcal L^1(\Omega, \scr F, \bb P)\).
+    réelles i.i.d.\ dans \(\mathcal L^1(\Omega, \scr F, \bb P)\).
     Alors
     \begin{equation*}
         \ol{X_n} = \frac{X_1 + \cdots + X_n}{n} \cvpsn \bb E[X_1].
