--- a/src/HAX501X_Groupes-et-Anneaux-I/tds/td_main.tex
+++ b/src/HAX501X_Groupes-et-Anneaux-I/tds/td_main.tex
@@ -14,28 +14,34 @@
 \begin{document}
     \maketitle
     \tableofcontents
-    \newpage
 
+    \newpage
     \section*{TD1 --- Rappels d'arithmétique des entiers}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
     \setcounter{section}{1}
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
-    \newpage
 
+    \newpage
     \section*{TD2 --- Etude de \(\Z/n\Z\)}\label{sec:TD2}
     \addcontentsline{toc}{section}{\nameref{sec:TD2}}
     \setcounter{section}{2}
     \setcounter{tdcounter}{0}
     \input{../tds/td_2.tex}
-    \newpage
 
+    \newpage
     \section*{TD3 --- Introduction à la théorie des groupes}\label{sec:TD3}
     \addcontentsline{toc}{section}{\nameref{sec:TD3}}
     \setcounter{section}{3}
     \setcounter{tdcounter}{0}
     \input{../tds/td_3.tex}
+
     \newpage
+    \section*{TD4 --- Introduction à la théorie des anneaux et des corps}\label{sec:TD4}
+    \addcontentsline{toc}{section}{\nameref{sec:TD4}}
+    \setcounter{section}{4}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_4.tex}
 \end{document}
 
 
