--- a/src/HAX506X_Probabilites/tds/td_main.tex
+++ b/src/HAX506X_Probabilites/tds/td_main.tex
@@ -49,4 +49,11 @@
     \setcounter{section}{5}
     \setcounter{tdcounter}{0}
     \input{../tds/td_5.tex}
+
+    \newpage
+    \section*{TD6 --- Conditionnement et indépendance}\label{sec:TD6}
+    \addcontentsline{toc}{section}{\nameref{sec:TD6}}
+    \setcounter{section}{6}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_6.tex}
 \end{document}
